--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -70,152 +70,151 @@
 
 
 
-
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-    <div class="table-content-description">{{allifquery.first_name}} Details </div>
- 
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="allif-details-card table-responsive">
-      <table class="table table-layout">
-      <tbody>
-      <tr>
-        <td>Company</td>
-        <td>{{allifquery.company}}companylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
+  <div class="row mt-12"> <!--start....table row-->
+    <div class="col-md-12"> <!--start....table column-->
+    <div class="allif-scroll-table">
+      <div class="table-responsive allif-full-table">
+        <div class="row"><!--start of row div --->
+    <!--start of column two-->
+    <div class="col-md-4">
+      
+        <!--start of the table here-->
+        <div class="allif-details-card table-responsive">
+        <table class="table table-layout">
+        <tbody>
+        <tr>
+          <td>Company</td>
+          <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+        <tr>
+        <td>Email </td>
+        <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
     
         </tr>
-      <tr>
-      <td>Email </td>
-      <td>{{allifquery.email}}email companylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-  
-      </tr>
-       
+        
+          <tr>
+            <td>Phone 1</td>
+            <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
         <tr>
-          <td>Phone 1</td>
-          <td>{{allifquery.phone1}}phone1companylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
+          <td>Phone 2</td>
+          <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
       
           </tr>
       <tr>
-        <td>Phone 2</td>
-        <td>{{allifquery.phone2}}phonecompanylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re2</td>
+        <td>City</td>
+        <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
     
         </tr>
-    <tr>
-      <td>City</td>
-      <td>{{allifquery.city}}citycompanylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-  
-      </tr>
-      <tr>
-        <td>Country</td>
-        <td>{{allifquery.country}}countrycompanylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-    
-        </tr>
- 
-        </tbody>
-        </table>
+        <tr>
+          <td>Country</td>
+          <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+   
+          </tbody>
+          </table>
+        </div>
+          </div>
+             
+      
+       <!--start of column two-->
+       <div class="col-md-4">
+         <!--start of the table here-->
+         <div class="allif-details-card table-responsive">
+         <table class="table table-layout">
+          <tbody>
+          <tr>
+            <td>Company</td>
+            <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+          <tr>
+          <td>Email</td>
+          <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+          
+            <tr>
+              <td>Phone 1</td>
+              <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+          
+              </tr>
+          <tr>
+            <td>Phone 2</td>
+            <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+        <tr>
+          <td>City</td>
+          <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+          <tr>
+            <td>Country</td>
+            <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+     
+            </tbody>
+            </table>
+            </div>
+            </div>
+      
+      
+       <!--start of column two-->
+       <div class="col-md-4">
+        <div class="allif-details-card table-responsive">
+         <!--start of the table here-->
+         <table class="table table-layout">
+          <tbody>
+          <tr>
+            <td>Company</td>
+            <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+          <tr>
+          <td>Email</td>
+          <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+          
+            <tr>
+              <td>Phone 1</td>
+              <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+          
+              </tr>
+          <tr>
+            <td>Phone 2</td>
+            <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+        <tr>
+          <td>City</td>
+          <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+      
+          </tr>
+          <tr>
+            <td>Country</td>
+            <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+     
+            </tbody>
+            </table>
+    </div>
       </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-        <tr>
-          <td>Company</td>
-          <td>{{allifquery.company}}companycompanylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-      
-          </tr>
-        <tr>
-        <td>Email</td>
-        <td>{{allifquery.email}}emailcompanylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-    
-        </tr>
+      </div><!--end of row div --->
         
-          <tr>
-            <td>Phone 1</td>
-            <td>{{allifquery.phone1}}phone2companylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-        
-            </tr>
-        <tr>
-          <td>Phone 2</td>
-          <td>{{allifquery.phone2}}phonecompanylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-      
-          </tr>
-      <tr>
-        <td>City</td>
-        <td>{{allifquery.city}}citycompanylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-    
-        </tr>
-        <tr>
-          <td>Country</td>
-          <td>{{allifquery.country}}cityt</td>
-      
-          </tr>
-   
-          </tbody>
-          </table>
           </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        <tr>
-          <td>Company</td>
-          <td>{{allifquery.company}}countrycompanylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-      
-          </tr>
-        <tr>
-        <td>Email</td>
-        <td>{{allifquery.email}}compnay</td>
-    
-        </tr>
-        
-          <tr>
-            <td>Phone 1</td>
-            <td>{{allifquery.phone1}}phone1companylkjkljwlejrk wlkejrkljewklr kjlkwejrelkwjrkl lkwejrlkewjklr wjlkwejrlkewjr wlkjklwejr lkewjrlkwjwejrlkewj re</td>
-        
-            </tr>
-        <tr>
-          <td>Phone 2</td>
-          <td>{{allifquery.phone2}}phone2</td>
-      
-          </tr>
-      <tr>
-        <td>City</td>
-        <td>{{allifquery.city}}city</td>
-    
-        </tr>
-        <tr>
-          <td>Country</td>
-          <td>{{allifquery.country}}contry</td>
-      
-          </tr>
-   
-          </tbody>
-          </table>
   
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
+  </div><!--end....table row-->
+  </div>
+  <!--end of table-->
+  
+  </div><!--end of main container of the page....-->
 </div>
 </div>
   
