--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -72,7 +72,7 @@
 
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-tabless">
+    <div class="allif-scroll-table">
       <div class="table-responsivesss allif-full-tabless">
         <div class="row"><!--start of row div --->
     <!--start of column two-->
