--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -72,8 +72,8 @@
 
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-table">
-      <div class="table-responsivesss allif-full-tabless">
+    <div class="allif-scroll-table-noooo">
+      <div class="table-responsive allif-full-tabless">
         <div class="row"><!--start of row div --->
     <!--start of column two-->
     <div class="col-md-4">
