--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -73,13 +73,13 @@
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"> <!--start....table column-->
     <div class="allif-scroll-table">
-      <div class="table-responsivedddd allif-full-table">
+      <div class="allif-full-table">
         <div class="row"><!--start of row div --->
     <!--start of column two-->
     <div class="col-md-4">
       
         <!--start of the table here-->
-        <div class="allif-details-cardfdssss table-responsive">
+        <div class="table-responsive">
         <table class="table table-layout">
         <tbody>
         <tr>
