--- a/static/allifapperp/css/body/mainbodyui.css
+++ b/static/allifapperp/css/body/mainbodyui.css
@@ -303,6 +303,11 @@ background-color: var(--main-background-color);
   background-color: var(--main-background-color);
   margin-bottom: 1em;
   box-shadow: 0em 0em 0.5em #858585;
+
+  height: auto;
+  max-height: 80vh;
+  overflow: auto;
+  overflow-y: auto;
   
   
 }
@@ -324,7 +329,7 @@ text-overflow: ellipsis; /* Show ellipsis for overflow content */
 white-space: nowrap; /* Prevent text from wrapping */
 
 }
-.allif-full-table{
+.allif-full-tablesss{
   height: auto;
   max-height: 80vh;
   overflow: auto;
