--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -73,7 +73,7 @@
   <div class="row mt-12"> <!--start....table row-->
     <div class="col-md-12"> <!--start....table column-->
     <div class="allif-scroll-table">
-      <div class="allif-full-tabledd">
+      <div class="allif-full-table">
         <div class="row"><!--start of row div --->
     <!--start of column two-->
     <div class="col-md-4">
