--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -62,6 +62,7 @@
 
 <div class="allifmaincontainer">
   <div class="row mt-12"> <!--start....table row-->
+    <div class="table-details-content-description">{{allifquery}} Details</div>
     <div class="col-md-12"> <!--start....table column-->
     <div class="allif-scroll-table">
       <div class="allif-full-table">
