--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
@@ -60,6 +60,8 @@
           <td>Compnay Sector</td>
           <td>Company Owner</td>
           <td>Company Email Address</td>
+          <td>Actions</td>
+          <td></td>
          
          
           </tr>
@@ -75,18 +77,33 @@
           </td>
           
           <td>
-            {{item.owner}}
+            {{item.owner}}fdfsfdds jwjeljrlewj sjerlkjewlkjre lklwjreljewlkjrlkew lkjwelkrjlkwejr lkjwlkjrelkewjwe
             
            </td>
           <td>
           
-           {{item.notes}}
+           {{item.notes}}fdfsfdds jwjeljrlewj sjerlkjewlkjre lklwjreljewlkjrlkew lkjwelkrjlkwejr lkjwlkjrelkewjwe
             
           </td>
 
           <td>
-           {{item.date|date:'d/m/Y'}}
+           {{item.date|date:'d/m/Y'}}fdfsfdds jwjeljrlewj sjerlkjewlkjre lklwjreljewlkjrlkew lkjwelkrjlkwejr lkjwlkjrelkewjwe
           </td>
+
+          <td>
+            <div class="dropdown allifmaal-content-dropdown">
+              <a class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              open
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <div class="content-dropdown-menu">
+                <li><a class="dropdown-item" href="">Editfdsfkj sdfjdslkjflsdk flkjsdklf dsljfdlast</a></li>
+                <li><a class="dropdown-item" href="">Delete jfldksjfl sdjfls ksjdflkdsfjsldkj lksjdflkdsj fdljdsklast</a></li>
+              </div>
+              </ul>
+            </div>
+          </td>
+          <td></td>
          
         </tr>
         {% endfor %}
