--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/divisions.html
@@ -61,6 +61,7 @@
           <td>Compnay Sector</td>
           <td>Company Owner</td>
           <td>Company Email Address</td>
+          <td>dfdf</td>
           
           </tr>
           </thead>
@@ -68,6 +69,9 @@
               
           {% for item in allifqueryset %}
           <tr>
+
+           
+            
             <td class="allif-fix-table-col">
               <a href="{% url 'allifmaalcommonapp:commonDivisionDetails' item.id user_var glblslug %}" class="allif-table-links">
              {{item.division}}
@@ -100,6 +104,8 @@
             <td>{{item.owner}}</td>
             
             <td>{{item.email}}</td>
+
+           
         
           </tr>
           
