--- a/static/allifapperp/css/body/mainbodyui.css
+++ b/static/allifapperp/css/body/mainbodyui.css
@@ -297,9 +297,9 @@ background-color: var(--main-background-color);
   max-height: 80vh;
   margin-left: 0px;
   margin-right: 0px;
-  /*overflow: auto;*/
-   /* overflow-x: auto;*/
-    /*overflow-y: auto;*/
+  overflow: auto;
+   overflow-x: auto;
+  overflow-y: auto;
   
  
   
@@ -335,8 +335,8 @@ white-space: nowrap; /* Prevent text from wrapping */
   max-height: 80vh;
   
   
-   /*overflow: auto;*/
-    /*overflow-y: auto;*/
+   overflow: auto;
+    overflow-y: auto;
   
 }
 .allif-fix-table-col {
