--- a/static/allifapperp/css/body/mainbodyui.css
+++ b/static/allifapperp/css/body/mainbodyui.css
@@ -297,7 +297,9 @@ background-color: var(--main-background-color);
   max-height: 80vh;
   margin-left: 0px;
   margin-right: 0px;
- 
+  /*overflow: auto;*/
+   /* overflow-x: auto;*/
+    /*overflow-y: auto;*/
   
  
   
@@ -334,7 +336,8 @@ white-space: nowrap; /* Prevent text from wrapping */
   
   
    overflow: auto;
-   
+   overflow-x: hidden;
+    /*overflow-y: auto;*/
   
 }
 .allif-fix-table-col {
