--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -65,7 +65,7 @@
     <div class="table-details-content-description">{{allifquery}} Details</div>
     <div class="col-md-12"> <!--start....table column-->
     <div class="allif-scroll-table">
-      <div class="allif-full-table">
+      <div class="allif-info-tables">
         <div class="row"><!--start of row div --->
     <!--start of column two-->
     <div class="col-md-4">
@@ -75,33 +75,33 @@
         <table class="table table-layout">
         <tbody>
         <tr>
-          <td>Company</td>
+          <td class="allif-fix-table-col">Company</td>
           <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
       
           </tr>
         <tr>
-        <td>Email </td>
+        <td class="allif-fix-table-col">Email </td>
         <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
     
         </tr>
         
           <tr>
-            <td>Phone 1</td>
+            <td class="allif-fix-table-col">Phone 1</td>
             <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
         
             </tr>
         <tr>
-          <td>Phone 2</td>
+          <td class="allif-fix-table-col">Phone 2</td>
           <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
       
           </tr>
       <tr>
-        <td>City</td>
+        <td class="allif-fix-table-col">City</td>
         <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
     
         </tr>
         <tr>
-          <td>Country</td>
+          <td class="allif-fix-table-col">Country</td>
           <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
       
           </tr>
@@ -119,33 +119,33 @@
          <table class="table table-layout">
           <tbody>
           <tr>
-            <td>Company</td>
+            <td class="allif-fix-table-col">Company</td>
             <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
         
             </tr>
           <tr>
-          <td>Email</td>
+          <td class="allif-fix-table-col">Email</td>
           <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
       
           </tr>
           
             <tr>
-              <td>Phone 1</td>
+              <td class="allif-fix-table-col">Phone 1</td>
               <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
           
               </tr>
           <tr>
-            <td>Phone 2</td>
+            <td class="allif-fix-table-col">Phone 2</td>
             <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
         
             </tr>
         <tr>
-          <td>City</td>
+          <td class="allif-fix-table-col">City</td>
           <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
       
           </tr>
           <tr>
-            <td>Country</td>
+            <td class="allif-fix-table-col">Country</td>
             <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
         
             </tr>
@@ -163,33 +163,33 @@
          <table class="table table-layout">
           <tbody>
           <tr>
-            <td>Company</td>
+            <td class="allif-fix-table-col">Company</td>
             <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
         
             </tr>
           <tr>
-          <td>Email</td>
+          <td class="allif-fix-table-col">Email</td>
           <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
       
           </tr>
           
             <tr>
-              <td>Phone 1</td>
+              <td class="allif-fix-table-col">Phone 1</td>
               <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
           
               </tr>
           <tr>
-            <td>Phone 2</td>
+            <td class="allif-fix-table-col">Phone 2</td>
             <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
         
             </tr>
         <tr>
-          <td>City</td>
+          <td class="allif-fix-table-col">City</td>
           <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
       
           </tr>
           <tr>
-            <td>Country</td>
+            <td class="allif-fix-table-col">Country</td>
             <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
         
             </tr>
