--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -193,6 +193,68 @@
             <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
         
             </tr>
+            <tr>
+              <td class="allif-fix-table-col">Company</td>
+              <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+          
+              </tr>
+            <tr>
+            <td class="allif-fix-table-col">Email</td>
+            <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+            
+              <tr>
+                <td class="allif-fix-table-col">Phone 1</td>
+                <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Phone 2</td>
+              <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+          
+              </tr>
+          <tr>
+            <td class="allif-fix-table-col">City</td>
+            <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Country</td>
+              <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Company</td>
+                <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+            
+                </tr>
+              <tr>
+              <td class="allif-fix-table-col">Email</td>
+              <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+          
+              </tr>
+              
+                <tr>
+                  <td class="allif-fix-table-col">Phone 1</td>
+                  <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+              
+                  </tr>
+              <tr>
+                <td class="allif-fix-table-col">Phone 2</td>
+                <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">City</td>
+              <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Country</td>
+                <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+            
+                </tr>
      
             </tbody>
             </table>
