--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
@@ -60,7 +60,12 @@
           <td>Company Owner</td>
           <td>Company Email Address</td>
           <td>Actions</td>
+          
           <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td> . . . </td>
          
          
           </tr>
@@ -92,17 +97,22 @@
           <td>
             <div class="dropdown allifmaal-content-dropdown">
               <a class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-              open
+            Open
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <div class="content-dropdown-menu">
-                <li><a class="dropdown-item" href="">Editfdsfkj sdfjdslkjflsdk flkjsdklf dsljfdlast</a></li>
-                <li><a class="dropdown-item" href="">Delete jfldksjfl sdjfls ksjdflkdsfjsldkj lksjdflkdsj fdljdsklast</a></li>
+                <li><a class="dropdown-item" href="">Edit Item</a></li>
+               
               </div>
               </ul>
             </div>
           </td>
           <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td> . . . </td>
+
          
         </tr>
         {% endfor %}
