--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sectors.html
@@ -54,10 +54,10 @@
       <table class="table table-layout">
         <thead>
           <tr class="allif-table-header-row">
-          <td class="allif-fix-table-col">Division Name</td>
-          <td>Compnay Sector</td>
-          <td>Company Owner</td>
-          <td>Company Email Address</td>
+          <td class="allif-fix-table-col">Sector Name</td>
+          <td>Sector Notes</td>
+          <td>Created By</td>
+          <td>Date</td>
           <td>Actions</td>
           <td> . . . </td>
           <td></td>
@@ -73,16 +73,16 @@
            </a>
           </td>
           
-          <td>
-            {{item.owner}}
-            
-           </td>
+         
           <td>
           
            {{item.notes}}
             
           </td>
-
+          <td>
+            {{item.owner}}
+            
+           </td>
           <td>
            {{item.date|date:'d/m/Y'}}
           </td>
@@ -94,7 +94,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <div class="content-dropdown-menu">
-                <li><a class="dropdown-item" href="">Edit Item</a></li>
+                <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditSector' item.id user_var glblslug %}">Edit Item</a></li>
                 <li><a class="dropdown-item" href="">Edit Item</a></li>
                
               </div>
@@ -138,7 +138,7 @@
       
       <td>
        
-        {{form.name}}
+        {{form.notes}}
        
        </td>
        <td>
@@ -160,6 +160,7 @@
 </div>
 </div>
   
+
   {% block scripts %}
  
   {% endblock %}
