--- a/allifmaalcommonapp/templates/allifmaalcommonapp/holder.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/holder.html
@@ -1,7 +1,7 @@
 
    1. |floatformat:2|intcomma
 2. |date:'d/m/Y'
-
+{{myallifquery.quantity|floatformat:2|intcomma}}
 
 <div>
   <nav class="navbar navbar-expand-lg navbar-light allifmaal-top-nav-bar">
