--- a/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/sectors/sector-details.html
@@ -12,32 +12,23 @@
   <div class="row mt-12" ><!--start....header row-->
   <div class="col-md-12"><!--start....header column-->
   <div class="container-fluid amel-content-header">
-    <a class="amel-table-list-identifier">Sectors:</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddDivision' user_var glblslug %}">Add Divison</a>
-    <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-    <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+    <div class="dropdown allifmaal-content-dropdown">
+      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+      Actions
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+        <div class="content-dropdown-menu">
+       
+       <li><a class="dropdown-item allif-table-links" href="{% url 'allifmaalcommonapp:commonEditSector' allifquery.id user_var glblslug %}">Edit Item</a></li>
+       
+       <li><a  class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteSector' allifquery.id user_var glblslug %}">Delete Item</a></li>
+        </div>
+      </ul>
+    </div>
   
-  
-    <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-    <a href="{% url 'allifmaaladminapp:adminappHome' user_var glblslug %}"> Admin Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Companies </a>
-  
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
   <a href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}">Sectors </a>
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Actions
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-     
-     <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditSector' allifquery.id user_var glblslug %}">Edit Sector</a></li>
-     
-     <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonWantToDeleteSector' allifquery.id user_var glblslug %}" class="body-delete-link">Delete Sector</a></li>
-      </div>
-    </ul>
-  </div>
+  
   <div class="dropdown allifmaal-content-dropdown">
     <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
     Modules
@@ -75,37 +66,16 @@
         <table class="table table-layout">
         <tbody>
         <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+          <td class="allif-fix-table-col">Sector Name</td>
+          <td>{{allifquery.name}}</td>
       
           </tr>
-        <tr>
-        <td class="allif-fix-table-col">Email </td>
-        <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-    
-        </tr>
-        
           <tr>
-            <td class="allif-fix-table-col">Phone 1</td>
-            <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+            <td class="allif-fix-table-col">Notes</td>
+            <td>{{allifquery.notes}}</td>
         
             </tr>
-        <tr>
-          <td class="allif-fix-table-col">Phone 2</td>
-          <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-      
-          </tr>
-      <tr>
-        <td class="allif-fix-table-col">City</td>
-        <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-    
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Country</td>
-          <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-      
-          </tr>
-   
+       
           </tbody>
           </table>
         </div>
@@ -119,37 +89,11 @@
          <table class="table table-layout">
           <tbody>
           <tr>
-            <td class="allif-fix-table-col">Company</td>
-            <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+            <td class="allif-fix-table-col">Created On</td>
+            <td>{{allifquery.date|date:'d/m/Y'}}</td>
         
             </tr>
-          <tr>
-          <td class="allif-fix-table-col">Email</td>
-          <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-      
-          </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Phone 1</td>
-              <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-          
-              </tr>
-          <tr>
-            <td class="allif-fix-table-col">Phone 2</td>
-            <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-        
-            </tr>
-        <tr>
-          <td class="allif-fix-table-col">City</td>
-          <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Country</td>
-            <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-        
-            </tr>
-     
+         
             </tbody>
             </table>
             </div>
@@ -163,99 +107,11 @@
          <table class="table table-layout">
           <tbody>
           <tr>
-            <td class="allif-fix-table-col">Company</td>
-            <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
+            <td class="allif-fix-table-col">Created By</td>
+            <td>{{allifquery.owner}}</td>
         
             </tr>
-          <tr>
-          <td class="allif-fix-table-col">Email</td>
-          <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-      
-          </tr>
-          
-            <tr>
-              <td class="allif-fix-table-col">Phone 1</td>
-              <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-          
-              </tr>
-          <tr>
-            <td class="allif-fix-table-col">Phone 2</td>
-            <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-        
-            </tr>
-        <tr>
-          <td class="allif-fix-table-col">City</td>
-          <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Country</td>
-            <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Company</td>
-              <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-          
-              </tr>
-            <tr>
-            <td class="allif-fix-table-col">Email</td>
-            <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-        
-            </tr>
-            
-              <tr>
-                <td class="allif-fix-table-col">Phone 1</td>
-                <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-            
-                </tr>
-            <tr>
-              <td class="allif-fix-table-col">Phone 2</td>
-              <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-          
-              </tr>
-          <tr>
-            <td class="allif-fix-table-col">City</td>
-            <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Country</td>
-              <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Company</td>
-                <td>{{allifquery.company}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-            
-                </tr>
-              <tr>
-              <td class="allif-fix-table-col">Email</td>
-              <td>{{allifquery.email}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-          
-              </tr>
-              
-                <tr>
-                  <td class="allif-fix-table-col">Phone 1</td>
-                  <td>{{allifquery.phone1}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-              
-                  </tr>
-              <tr>
-                <td class="allif-fix-table-col">Phone 2</td>
-                <td>{{allifquery.phone2}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-            
-                </tr>
-            <tr>
-              <td class="allif-fix-table-col">City</td>
-              <td>{{allifquery.city}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Country</td>
-                <td>{{allifquery.country}}fldsjfkdsj lkwjreklewj rekwjrk lkjerlkewklrjklewr jwerljewlrjeklwjreklj erlkjewkljrewrewlast</td>
-            
-                </tr>
-     
+         
             </tbody>
             </table>
     </div>
