--- a/allifmaalusersapp/templates/allifmaalusersapp/error/error.html
+++ b/allifmaalusersapp/templates/allifmaalusersapp/error/error.html
@@ -8,16 +8,25 @@
 {%endblock%}
    
 {% block body %}
+
 <div class="container"><!--start of main container of the page--...#17a2b8;  -->
 	<div class="d-flex justify-content-center h-100">
 	  <div class="user_card">
         <div class="d-flex justify-content-center error-page">
         <h4>Error</h4>
         </div>
+        <hr>
 		
 	  <div>
 		  {{error_message}}
           </div>
+
+          <div class="justify-content-center">
+            <hr>
+            <a href="{% url 'allifmaalusersapp:userLoginPage' %}" style="text-decoration: none;">
+                Login Page
+            </a>
+            </div>  
 	  
   </div><!--end of row div --->
   
@@ -25,24 +34,5 @@
   
 </div>
 
-		  
-<script>
-/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-//We start indexing at one because CSRF_token is considered and input field 
-*/
-
-//Query All input fields
-var form_fields = document.getElementsByTagName('input')
-form_fields[1].placeholder='User Name';
-form_fields[2].placeholder='First Name';
-form_fields[3].placeholder='Last Name';
-form_fields[4].placeholder='Email Address';
-form_fields[5].placeholder='Enter password';
-form_fields[6].placeholder='Confirm Password';
-for (var field in form_fields){	
-  form_fields[field].className += ' form-control'
-}
-</script>
- 
 {% endblock %}
 
