--- a/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/base/sidetopnavbars/sidetopnavbars.html
@@ -124,8 +124,10 @@
   
     <li><a class="dropdown-item" href="#">Insurances</a></li>
     <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonStocks' user_var glblslug %}">Stock</a></li>
+    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonLoggedInUserDetails' user_var glblslug %}">Account</a></li>
   
 
+    
       </div>
     
         </ul>
